# python-youtube

./: .editorconfig  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/: CONTRIBUTING.md
.github/workflows/: linting.yaml  release.yaml  tests.yaml  typing.yaml
docs/: conf.py  index.rst
src/async_python_youtube/: exceptions.py  helper.py  models.py  oauth.py  types.py  youtube.py
src/python_youtube/: __init__.py  const.py  helper.py  models.py  youtube.py
src/youtubeaio/: __init__.py  const.py  helper.py  models.py  oauth.py  types.py  youtube.py
tests/: __init__.py  conftest.py  const.py  helper.py  ruff.toml  syrupy.py  test_auth.py  test_channel.py  test_client.py  test_helper.py  test_oauth.py  test_playlist_item.py  test_short.py  test_subscription.py  test_video.py  test_youtube.py
tests/__snapshots__/: test_video.ambr
tests/fixtures/: channel_response_snippet.json  playlist_item_response_snippet_content_details.json  refresh_token.json  subscription_response_snippet.json  video_response_1.json  video_response_2.json  video_response_snippet.json  youtube_not_activated.json
tests/fixtures/channel/: base.json
tests/fixtures/channel/1/: base.json  brandingSettings.json  contentDetails.json  snippet.json  statistics.json  status.json  topicDetails.json
tests/fixtures/playlist_item/: base.json
tests/fixtures/playlist_item/1/: base.json  contentDetails.json  snippet.json  status.json
tests/fixtures/subscription/: base.json
tests/fixtures/subscription/1/: base.json  contentDetails.json  snippet.json  subscriberSnippet.json
tests/fixtures/video/: base.json
tests/fixtures/video/1/: base.json  contentDetails.json  localizations.json  player.json  snippet.json  statistics.json  status.json  topicDetails.json
