[tool.poetry]
name = "youtubeaio"
version = "1.1.4"
description = "Asynchronous Python client for YouTube V3 API."
authors = ["Joost Lekkerkerker <joostlek@outlook.com>"]
maintainers = ["Joost Lekkerkerker <joostlek@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joostlek/python-youtube"
repository = "https://github.com/joostlek/python-youtube"
documentation = "https://github.com/joostlek/python-youtube"
keywords = ["youtube", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "youtubeaio", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.0.0"
yarl = ">=1.6.0"
pydantic = ">=1.10.8"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.3.0"
covdefaults = "2.3.0"
coverage = {version = "7.6.8", extras = ["toml"]}
mypy = "1.13.0"
pre-commit = "4.0.1"
pre-commit-hooks = "5.0.0"
pylint = "3.3.1"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "6.0.0"
ruff = "0.8.0"
safety = "3.2.11"
yamllint = "1.35.1"
syrupy = "4.8.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joostlek/python-youtube/issues"
Changelog = "https://github.com/joostlek/python-youtube/releases"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["youtubeaio"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
#no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic",
]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-many-positional-arguments",
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "unnecessary-dunder-call",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN101", # Self... explanatory
  "ANN102", # cls... just as useless
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "TCH001",
  "TRY301",
  "FBT001", # Boolean positional arg
  "FBT002", # Boolean default arg
  "PLR0913", # A lot of arguments
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
known-first-party = ["youtubeaio"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
