[project]
name = "youtubeaio"
version = "1.1.4"
description = "Asynchronous Python client for YouTube V3 API."
authors = [{ name = "Joost Lekkerkerker", email = "joostlek@outlook.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Joost Lekkerkerker", email = "joostlek@outlook.com" }]
keywords = [
    "youtube",
    "api",
    "async",
    "client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.0.0",
    "yarl>=1.6.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/joostlek/python-youtube"
Repository = "https://github.com/joostlek/python-youtube"
Documentation = "https://github.com/joostlek/python-youtube"
"Bug Tracker" = "https://github.com/joostlek/python-youtube/issues"
Changelog = "https://github.com/joostlek/python-youtube/releases"

[dependency-groups]
dev = [
    "aresponses==3.0.0",
    "codespell==2.4.2",
    "covdefaults==2.3.0",
    "coverage[toml]==7.14.1",
    "mypy==1.20.2",
    "prek==0.4.5",
    "pre-commit-hooks==6.0.0",
    "pylint==4.0.6",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "safety==3.8.1",
    "yamllint==1.38.0",
    "syrupy==5.3.2",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/youtubeaio"]

[tool.hatch.build.targets.wheel]
include = ["src/youtubeaio"]

[tool.hatch.build.targets.wheel.sources]
"src/youtubeaio" = "youtubeaio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["youtubeaio"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.13"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
#no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic",
]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-many-positional-arguments",
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "unnecessary-dunder-call",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "TC001",
  "TRY301",
  "FBT001", # Boolean positional arg
  "FBT002", # Boolean default arg
  "PLR0913", # A lot of arguments
  "ISC001", # Conflicts with other rules
  "COM812", # Conflicts with other rules
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
known-first-party = ["youtubeaio"]

[tool.ruff.lint.mccabe]
max-complexity = 25
